# agents_project

./: .env  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  formatted_inputs.txt  output.json  pyproject.toml  requirements.txt  training_data.pkl
backend/src/recruitment/: __init__.py  crew.py  main.py
backend/src/recruitment/config/: agents.yaml  tasks.yaml
backend/src/recruitment/schemas/: __init__.py  candidate.py  job_requirements.py  list_candidtes.py
backend/src/recruitment/tools/: __init__.py  client.py  driver.py  linkedin.py
frontend/: Dockerfile  package-lock.json  package.json  project_agents.rar
frontend/src/: App.css  App.js  Backlog.js  BurndownChart.js  Chat.js  HRChat.js  HomePage.js  NewProject.js  Sidebar.js  SprintBoard.js  SprintPage.js  SprintPlanning.js  TaskCard.js  router.js
frontend/src/components/agent/: AgentItem.js  AgentList.js  data.js
frontend/src/components/candidates/: CandidatesItem.js  CandidatesList.js  dataCandidate.js
frontend/src/components/routes/: Agents.js  Candidates.js  Project.js
frontend/src/services/: apiService.js
nginx/: nginx.conf
