[tool.poetry]
name = "recruitment"
version = "0.1.0"
description = "recruitment using crewAI"
authors = ["Gaylord Carrillo <gaylord.carrillo.caballero@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
selenium = "^4.21.0"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
fasapi = "uvicorn recruitment.main:app --reload"
recruitment = "recruitment.main:run"
train = "recruitment.main:train"

[build-system]
requires = ["poetry-core"]